Example 5 added to demonstrate textbox level toolbar and node deletion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,12 @@
           <p class="card-text">Demonstrates custom tool button for each node.</p>
         </div>
       </div>
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title"><a routerLink='example5'>Delete Tree Node</a></h5>
+          <p class="card-text">Demonstrates custom button implementation to delete tree node + toolbar at textbox level.</p>
+        </div>
+      </div>
     </td>
     <td style='background-color: white'>
       <router-outlet></router-outlet>
